tests/NormalTests/paczka1/fuzzy1/55760509.err
Error in line 4: gUFq2lX S749 1,0
Error in line 15: SU=nvyZ A76 77,0
Error in line 2: A76 S749 40,5
Error in line 19: SU4nvyZ A76 6,9
Error in line 26: SU4nvyZ S749 -1,1
Error in line 18: gUFq2lX S749 35,2
Error in line 11: C84SfjkgO A966 93,5
Error in line 34: SU4nvyZ A76 78,4
